import {
  AirbyteLogger,
  AirbyteLogLevel,
  readTestResourceAsJSON,
} from 'faros-airbyte-cdk';

import {JiraConfig} from '../src/jira';
import {ProjectBoardFilter} from '../src/project-board-filter';
import {QueryMode} from '../src/streams/common';
import {iterate, paginate, setupJiraInstance} from './utils/test-utils';

describe('ProjectBoardFilter', () => {
  let logger: AirbyteLogger;
  let config: JiraConfig;
  let mockedImplementation: any;

  beforeAll(() => {
    logger = new AirbyteLogger(AirbyteLogLevel.DEBUG);
    config = readTestResourceAsJSON('project_board_filter/config.json');
  });

  beforeEach(() => {
    const searchProjects = paginate(
      readTestResourceAsJSON('project_board_filter/projects.json'),
      'values',
      50
    );
    const getAllBoards = paginate(
      readTestResourceAsJSON('project_board_filter/boards.json'),
      'values',
      50,
      true
    );
    mockedImplementation = {
      v2: {projects: {searchProjects}},
      agile: {board: {getAllBoards}},
    };
    setupJiraInstance(mockedImplementation, true, config, logger);
  });

  test('getProjects - all projects - no list', async () => {
    const projectBoardFilter = new ProjectBoardFilter(config, logger);
    const projects = await projectBoardFilter.getProjects();
    expect(projects).toMatchSnapshot();
  });

  test('getProjects - all projects - empty list', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, projects: []},
      logger
    );
    const projects = await projectBoardFilter.getProjects();
    expect(projects).toMatchSnapshot();
  });

  test('getProjects - specific projects included', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, projects: ['TEST-1', 'TEST-2']},
      logger
    );
    const projects = await projectBoardFilter.getProjects();
    expect(projects).toMatchSnapshot();
  });

  test('getProjects - specific projects excluded', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, excluded_projects: ['TEST-1']},
      logger
    );
    const projects = await projectBoardFilter.getProjects();
    expect(projects).toMatchSnapshot();
  });

  test('getBoards - all boards - no list', async () => {
    const projectBoardFilter = new ProjectBoardFilter(config, logger);
    const boards = await projectBoardFilter.getBoards();
    expect(boards).toMatchSnapshot();
  });

  test('getBoards - all boards - empty list', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, boards: []},
      logger
    );
    const boards = await projectBoardFilter.getBoards();
    expect(boards).toMatchSnapshot();
  });

  test('getBoards - specific boards included', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, boards: ['2', '3']},
      logger
    );
    const boards = await projectBoardFilter.getBoards();
    expect(boards).toMatchSnapshot();
  });

  test('getBoards - specific boards excluded', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, excluded_boards: ['2']},
      logger
    );
    const boards = await projectBoardFilter.getBoards();
    expect(boards).toMatchSnapshot();
  });

  test('getBoards (FarosGraph) - FarosClient is required', async () => {
    expect(
      () =>
        new ProjectBoardFilter(
          {...config, query_mode: QueryMode.FarosGraph},
          logger
        )
    ).toThrow(
      expect.objectContaining({
        message: expect.stringContaining('FarosClient is required'),
      })
    );
  });

  test('getBoards (FarosGraph) - nothing included - nothing excluded', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, query_mode: QueryMode.FarosGraph},
      logger,
      {nodeIterable: () => iterate([])} as any
    );
    const boards = await projectBoardFilter.getBoards();
    expect(boards).toMatchSnapshot();
  });

  test('getBoards (FarosGraph) - some included - nothing excluded', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, query_mode: QueryMode.FarosGraph},
      logger,
      {
        nodeIterable: () =>
          iterate(['2', '3'].map((uid) => taskBoardOptions(uid, 'Included'))),
      } as any
    );
    const boards = await projectBoardFilter.getBoards();
    expect(boards).toMatchSnapshot();
  });

  test('getBoards (FarosGraph) - nothing included - some excluded', async () => {
    const projectBoardFilter = new ProjectBoardFilter(
      {...config, query_mode: QueryMode.FarosGraph},
      logger,
      {
        nodeIterable: () =>
          iterate(['2'].map((uid) => taskBoardOptions(uid, 'Excluded'))),
      } as any
    );
    const boards = await projectBoardFilter.getBoards();
    expect(boards).toMatchSnapshot();
  });
});

function taskBoardOptions(
  uid: string,
  inclusionCategory: 'Included' | 'Excluded'
) {
  return {
    board: {
      uid,
    },
    inclusionCategory,
  };
}
