// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectBoardFilter getBoards (FarosGraph) - nothing included - nothing excluded 1`] = `
[
  "1",
  "2",
  "3",
]
`;

exports[`ProjectBoardFilter getBoards (FarosGraph) - nothing included - some excluded 1`] = `
[
  "1",
  "3",
]
`;

exports[`ProjectBoardFilter getBoards (FarosGraph) - some included - nothing excluded 1`] = `
[
  "2",
  "3",
]
`;

exports[`ProjectBoardFilter getBoards - all boards - empty list 1`] = `
[
  "1",
  "2",
  "3",
]
`;

exports[`ProjectBoardFilter getBoards - all boards - no list 1`] = `
[
  "1",
  "2",
  "3",
]
`;

exports[`ProjectBoardFilter getBoards - specific boards excluded 1`] = `
[
  "1",
  "3",
]
`;

exports[`ProjectBoardFilter getBoards - specific boards included 1`] = `
[
  "2",
  "3",
]
`;

exports[`ProjectBoardFilter getProjects - all projects - empty list 1`] = `
[
  "TEST-1",
  "TEST-2",
  "TEST-3",
]
`;

exports[`ProjectBoardFilter getProjects - all projects - no list 1`] = `
[
  "TEST-1",
  "TEST-2",
  "TEST-3",
]
`;

exports[`ProjectBoardFilter getProjects - specific projects excluded 1`] = `
[
  "TEST-2",
  "TEST-3",
]
`;

exports[`ProjectBoardFilter getProjects - specific projects included 1`] = `
[
  "TEST-1",
  "TEST-2",
]
`;
